--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
           Days available:
         </p>
         <p>
-          <input type="checkbox" name="available_field[]"><label> Sunday</label>
+          <input type="checkbox" name="available_field[]" value="Sunday"><label> Sunday</label>
         </p>
         <p>
-          <input type="checkbox" name="available_field[]"><label> Monday</label>
+          <input type="checkbox" name="available_field[]" value="Monday"><label> Monday</label>
         </p>
         <p>
-          <input type="checkbox" name="available_field[]"><label> Tuesday</label>
+          <input type="checkbox" name="available_field[]" value="Tuesday"><label> Tuesday</label>
         </p>
         <p>
-          <input type="checkbox" name="available_field[]"><label> Wednesday</label>
+          <input type="checkbox" name="available_field[]" value="Wednesday"><label> Wednesday</label>
         </p>
         <p>
-          <input type="checkbox" name="available_field[]"><label> Thursday</label>
+          <input type="checkbox" name="available_field[]" value="Thursday"><label> Thursday</label>
         </p>
         <p>
-          <input type="checkbox" name="available_field[]"><label> Friday</label>
+          <input type="checkbox" name="available_field[]" value="Friday"><label> Friday</label>
         </p>
         <p>
-          <input type="checkbox" name="available_field[]"><label> Saturday</label>
+          <input type="checkbox" name="available_field[]" value="Saturday"><label> Saturday</label>
         </p>
         <p>
           Any Comments?:
